# feedback-matching

./: .gitignore  Cargo.toml
data/schema/: matches_schema.json  participants_schema.json
src/: complete_givers.rs  file_io.rs  last_match_map.rs  main.rs  matching.rs  messages.rs  migrations.rs
src/matching/: complete_givers.rs  matching.rs  messages.rs  mod.rs
src/structs/: match.rs  matching_round.rs  mod.rs  participant.rs  participants_file.rs
