[package]
name = "feedback-matching"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
rand_chacha = "0.3.1"
time = { version = "0.3.31", features = ["serde-human-readable"] }
jsonschema = "0.17.1"

[dev-dependencies]
pretty_assertions = "1.4.0"
